force-app/main/default/objects/Data_Extension_Sync_Log__c/Data_Extension_Sync_Log__c.object-meta.xml
<CustomObject>
    <label>Data Extension Sync Log</label>
    <pluralLabel>Data Extension Sync Logs</pluralLabel>
    <description>The audit record every import, query, merge and consent action writes to. Row counts and validation results per run, so a half-load is caught before a send.</description>
</CustomObject>