force-app/main/default/objects/Data_Extension_Sync_Log__c/fields/BadAddresses__c.field-meta.xml
<CustomField>
    <fullName>BadAddresses__c</fullName>
    <label>Bad Addresses</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>0</scale>
</CustomField>