force-app/main/default/objects/Data_Extension_Sync_Log__c/fields/Duplicates__c.field-meta.xml
<CustomField>
    <fullName>Duplicates__c</fullName>
    <label>Duplicates</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>0</scale>
</CustomField>