force-app/main/default/objects/Data_Extension_Sync_Log__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Error Message</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>