force-app/main/default/objects/Data_Extension_Sync_Log__c/fields/Idempotent__c.field-meta.xml
<CustomField>
    <fullName>Idempotent__c</fullName>
    <label>Idempotent</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>