force-app/main/default/objects/Data_Extension_Sync_Log__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object_Name</label>
    <type>Text</type>
    <length>80</length>
</CustomField>