force-app/main/default/objects/Data_Extension_Sync_Log__c/fields/RecordsIn__c.field-meta.xml
<CustomField>
    <fullName>RecordsIn__c</fullName>
    <label>Records In</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>0</scale>
</CustomField>