force-app/main/default/objects/Data_Extension_Sync_Log__c/fields/RecordsOut__c.field-meta.xml
<CustomField>
    <fullName>RecordsOut__c</fullName>
    <label>Records Out</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>0</scale>
</CustomField>