force-app/main/default/objects/Data_Extension_Sync_Log__c/fields/RetentionDays__c.field-meta.xml
<CustomField>
    <fullName>RetentionDays__c</fullName>
    <label>Retention Days</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>