force-app/main/default/objects/Data_Extension_Sync_Log__c/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <label>Source System</label>
    <type>Text</type>
    <length>80</length>
</CustomField>