force-app/main/default/objects/Data_Extension_Sync_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status  c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition><value><fullName>Success</fullName><label>Success</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>Partial</fullName><label>Partial</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>Failed</fullName><label>Failed</label></value></valueSetDefinition>
    </valueSet>
</CustomField>