force-app/main/default/objects/Data_Extension_Sync_Log__c/fields/ValidatedAt__c.field-meta.xml
<CustomField>
    <fullName>ValidatedAt__c</fullName>
    <label>Validated At</label>
    <type>DateTime</type>
</CustomField>